# conceptual-geometer

./: .gitignore  README.md
rust/: Cargo.toml
rust/console-logger/: Cargo.toml
rust/console-logger/src/: lib.rs
rust/core/: Cargo.toml
rust/core/src/: conceptual_geometer_plugin.rs  internal.rs  lib.rs  model.rs
rust/core/src/internal/: model.rs  plugin_declaration.rs  plugin_registrar.rs
rust/core/src/internal/model/v_0/: cg_version.rs  mod.rs  plugin_server_message.rs  rustc_version.rs
rust/core/src/model/v_0/: cg_node.rs  mod.rs
rust/plugin-process/: Cargo.toml
rust/plugin-process/src/: main.rs
rust/server/: Cargo.toml
rust/server/migrations/: v0__initial.sql
rust/server/resources/: cg-default.toml
rust/server/src/: config.rs  main.rs  plugin.rs  server.rs
rust/server/src/plugin/: plugin_binary.rs  plugin_descriptor.rs  plugin_dylib.rs  plugin_proxy.rs
