[package]
name = "conceptual-geometer-plugin-process"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
eyre = "0.6.5"
libloading = "0.7.0"
reqwest = "0.11.4"
conceptual-geometer-core = { path = "../core" }