[package]
name = "conceptual-geometer-plugin-process"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
eyre = "0.6.5"
libloading = "0.7.0"
conceptual-geometer-core = { path = "../core" }
tokio = { version = "1.11.0", features = [ "rt-multi-thread", "sync" ] }
parity-tokio-ipc = "0.9.0"