[package]
name = "conceptual-geometer-server"
version = "0.1.0"
edition = "2018"

[dependencies]
eyre = "0.6.5"
libloading = "0.7.0"
conceptual-geometer-core = { path = "../core" }
tokio = { version = "1.11.0", features = [ "rt-multi-thread", "sync", "fs", "io-util" ] }
parity-tokio-ipc = "0.9.0"
serde_derive = "1.0.130"
serde = "1.0.130"
clap = "2.33.3"
toml = "0.5.8"
regex = "1.5.4"
lazy_static = "1.4.0"